--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>Vue tute</title>
 </head>
 
-<body class="bg-gray-700 text-white m-2 p-2">
-    <nav class="flex border-b font-bold gap-2 p-2">
+<body class="bg-gray-700 text-white">
+    <nav class="flex border-b font-bold gap-4 p-4">
         <a v-for="(link,index) in links" v-bind:key="`${index}`" class="cursor-pointer" v-bind:href="link.url"
             :title="`This links to ${link.text.toLowerCase()} page`">{{link.text}}</a>
         <!-- Mark how i use v-for to run a for loop-->
         <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
     </nav>
-    <div id="content">
+    <div id="content" class="m-2 p-2">
         <h1 class="text-3xl">{{pageTitle}}</h1>
         <p class="">{{content}}</p>
     </div>
