--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
 </head>
 
 <body class="bg-gray-700 text-white">
-    <nav class="flex border-b font-bold gap-4 p-4">
-        <a v-for="(link,index) in links" v-bind:key="`${index}`" class="cursor-pointer" v-bind:href="link.url"
-            :title="`This links to ${link.text.toLowerCase()} page`">{{link.text}}</a>
-        <!-- Mark how i use v-for to run a for loop-->
-        <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
-    </nav>
-    <div id="content" class="m-2 p-2">
-        <h1 class="text-3xl">{{pageTitle}}</h1>
-        <p class="">{{content}}</p>
-    </div>
+    <main>
+        <nav class="flex border-b font-bold gap-4 p-4">
+            <a v-for="(link,index) in links" v-bind:key="`${index}`" class="cursor-pointer" v-bind:href="link.url"
+                :title="`This links to ${link.text.toLowerCase()} page`">{{link.text}}</a>
+            <!-- Mark how i use v-for to run a for loop-->
+            <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
+        </nav>
+        <div class="m-2 p-2">
+            <h1 class="text-3xl">{{pageTitle}}</h1>
+            <p class="">{{content}}</p>
+        </div>
+    </main>
 
     <script>
+
         Vue.createApp({
-            data() {
+            data() { // this is state
                 return {
+                    pageTitle: 'Hello Vue',
+                    content: 'Hello to vue from me',
                     links: [
                         { text: 'Home', url: 'index.html' },
                         { text: 'About', url: 'about.html' },
@@ -34,16 +39,7 @@
                     ]
                 }
             }
-        }).mount('nav')
-
-        Vue.createApp({
-            data() { // this is state
-                return {
-                    pageTitle: 'Hello Vue',
-                    content: 'Hello to vue from me'
-                }
-            }
-        }).mount('#content')
+        }).mount('main')
     </script>
 </body>
 
