--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body class="bg-gray-700 text-white">
     <main>
         <nav class="flex border-b font-bold gap-4 p-4">
-            <a v-for="(page,index) in pages" v-bind:key="`${index}`" class="cursor-pointer" v-bind:class="{'text-green-400' : activePage == index}" v-bind:href="page.link.url"
-                :title="`This links to ${page.link.text.toLowerCase()} page`" v-on:click.prevent="activePage = index">{{page.link.text}}</a>
+            <a v-for="(page,index) in pages" v-bind:key="`${index}`"
+                v-bind:class="[activePage == index ? 'text-green-400' : '', 'cursor-pointer']" v-bind:href="page.link.url"
+                :title="`This links to ${page.link.text.toLowerCase()} page`"
+                v-on:click.prevent="activePage = index">{{page.link.text}}</a>
             <!-- Mark how i use v-for to run a for loop-->
             <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
             <!-- v-on has an alias @. Ex @click, @submit etc -->
