--- a/index.html
+++ b/index.html
@@ -13,24 +13,21 @@
 
 <body class="bg-gray-700 text-white">
     <main>
-        <nav class="flex border-b font-bold gap-4 p-4">
-            <a v-for="(page,index) in pages" v-bind:key="`${index}`"
-                v-bind:class="[activePage == index ? 'text-green-400' : '', 'cursor-pointer']" v-bind:href="page.link.url"
-                :title="`This links to ${page.link.text.toLowerCase()} page`"
-                v-on:click.prevent="activePage = index">{{page.link.text}}</a>
-            <!-- Mark how i use v-for to run a for loop-->
-            <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
-            <!-- v-on has an alias @. Ex @click, @submit etc -->
-        </nav>
-        <div class="m-2 p-2">
-            <h1 class="text-3xl">{{pages[activePage].content}}</h1>
-            <p class="">{{pages[activePage].content}}</p>
-        </div>
+
+        <navbar 
+            :pages="pages" 
+            :active-page="activePage" 
+            :navbar-link="index => activePage = index"></navbar>
+
+        <page-viewer 
+            v-bind:page-title="pages[activePage].content"
+            v-bind:page-content="pages[activePage].content"></page-viewer>
+            
     </main>
 
     <script>
 
-        Vue.createApp({
+        let app = Vue.createApp({
             data() { // this is state
                 return {
                     activePage: 0,
@@ -52,8 +49,34 @@
                         },
                     ],
                 }
-            }
-        }).mount('main')
+            },
+        })
+        app.component('page-viewer', { // convention to use kabab case
+            props: ['pageTitle', 'pageContent',], // notice how i use camel case here and kabab case when i'm passing data
+            // we can also pass just page and use page.pageTitle and page.content below
+            template: `
+        <div class="m-2 p-2">
+            <h1 class="text-3xl">{{pageTitle}}</h1>
+            <p class="">{{pageContent}}</p>
+        </div>
+        `
+        })
+
+        app.component('navbar', {
+            props: ['pages', 'activePage', 'navbarLink'],
+            template: `
+            <nav class="flex border-b font-bold gap-4 p-4">
+            <a v-for="(page,index) in pages" v-bind:key="index"
+                v-bind:class="[activePage == index ? 'text-green-400' : '', 'cursor-pointer']" v-bind:href="page.link.url"
+                :title="\`This links to \${page.link.text.toLowerCase()} page\`"
+                v-on:click.prevent="navbarLink(index)">{{page.link.text}}</a>
+            <!-- Mark how i use v-for to run a for loop-->
+            <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
+            <!-- v-on has an alias @. Ex @click, @submit etc -->
+        </nav>
+            `
+        })
+        app.mount('main')
     </script>
 </body>
 
