--- a/index.html
+++ b/index.html
@@ -1,83 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <title>Vue tute</title>
-</head>
-
-<body class="bg-gray-700 text-white">
-    <main>
-
-        <navbar 
-            :pages="pages" 
-            :active-page="activePage" 
-            :navbar-link="index => activePage = index"></navbar>
-
-        <page-viewer 
-            v-bind:page-title="pages[activePage].content"
-            v-bind:page-content="pages[activePage].content"></page-viewer>
-            
-    </main>
-
-    <script>
-
-        let app = Vue.createApp({
-            data() { // this is state
-                return {
-                    activePage: 0,
-                    pages: [
-                        {
-                            link: { text: 'Home', url: 'index.html' },
-                            pageTitle: 'Hello from home page',
-                            content: 'Hello to vue from home page',
-                        },
-                        {
-                            link: { text: 'About', url: 'about.html' },
-                            pageTitle: 'Hello from about page',
-                            content: 'Hello to vue from about page',
-                        },
-                        {
-                            link: { text: 'Content', url: 'content.html' },
-                            pageTitle: 'Hello from content page',
-                            content: 'Hello to vue from content page',
-                        },
-                    ],
-                }
-            },
-        })
-        app.component('page-viewer', { // convention to use kabab case
-            props: ['pageTitle', 'pageContent',], // notice how i use camel case here and kabab case when i'm passing data
-            // we can also pass just page and use page.pageTitle and page.content below
-            template: `
-        <div class="m-2 p-2">
-            <h1 class="text-3xl">{{pageTitle}}</h1>
-            <p class="">{{pageContent}}</p>
-        </div>
-        `
-        })
-
-        app.component('navbar', {
-            props: ['pages', 'activePage', 'navbarLink'],
-            template: `
-            <nav class="flex border-b font-bold gap-4 p-4">
-            <a v-for="(page,index) in pages" v-bind:key="index"
-                v-bind:class="[activePage == index ? 'text-green-400' : '', 'cursor-pointer']" v-bind:href="page.link.url"
-                :title="\`This links to \${page.link.text.toLowerCase()} page\`"
-                v-on:click.prevent="navbarLink(index)">{{page.link.text}}</a>
-            <!-- Mark how i use v-for to run a for loop-->
-            <!-- Mark the keywork v-bind (alias :) to bind data to attribute  -->
-            <!-- v-on has an alias @. Ex @click, @submit etc -->
-        </nav>
-            `
-        })
-        app.mount('main')
-    </script>
-</body>
-
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
